spacing fix

--- a/styles/pages/_error-success-page.scss
+++ b/styles/pages/_error-success-page.scss
@@ -24,7 +24,7 @@
 		}
 
 		p {
-			margin: 30px 0 0 0;
+			margin-top: 30px;
 		}
 
 		a,
